// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack-base returns expected dev configs 1`] = `
Object {
  "context": "/test",
  "devServer": Object {
    "client": Object {
      "overlay": Object {
        "errors": true,
        "warnings": false,
      },
    },
    "historyApiFallback": true,
    "hot": true,
    "open": false,
    "port": 3000,
    "static": "/test/static",
  },
  "devtool": "eval-source-map",
  "entry": "/test/src/index.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "@linaria/webpack-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      "...",
      CssMinimizerPlugin {
        "options": Object {
          "exclude": undefined,
          "include": undefined,
          "minify": [Function],
          "minimizerOptions": undefined,
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].js",
    "hashDigestLength": 12,
    "path": "/test/public",
    "publicPath": "/",
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "inject": true,
        "minify": false,
        "publicPath": "/",
        "template": "/test/src/index.html",
      },
      "version": 5,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.svg",
        "injectSpriteId": true,
      },
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
  "stats": Object {
    "logging": "warn",
  },
}
`;

exports[`webpack-base returns expected electron dev configs 1`] = `
Object {
  "context": "/test",
  "devServer": Object {
    "client": Object {
      "overlay": Object {
        "errors": true,
        "warnings": false,
      },
    },
    "historyApiFallback": true,
    "hot": true,
    "open": false,
    "port": 3000,
    "static": "/test/static",
  },
  "devtool": "eval-source-map",
  "entry": "/test/src/renderer/index.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src/renderer",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "@linaria/webpack-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/renderer/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/renderer/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      "...",
      CssMinimizerPlugin {
        "options": Object {
          "exclude": undefined,
          "include": undefined,
          "minify": [Function],
          "minimizerOptions": undefined,
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].js",
    "hashDigestLength": 12,
    "libraryTarget": "commonjs2",
    "path": "/test/src/build",
    "publicPath": "/",
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "inject": false,
        "minify": false,
        "publicPath": "/",
        "template": "/test/src/renderer/index.html",
      },
      "version": 5,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.svg",
        "injectSpriteId": false,
      },
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
  "stats": Object {
    "logging": "warn",
  },
  "target": "electron-renderer",
}
`;

exports[`webpack-base returns expected electron prod configs 1`] = `
Object {
  "bail": true,
  "context": "/test",
  "devtool": "source-map",
  "entry": "/test/src/renderer/index.js",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src/renderer",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "@linaria/webpack-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          "/test/path/to/mini-css-extract-loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "postcssOptions": Object {
                "plugins": Array [
                  Object {
                    "browsers": undefined,
                    "info": [Function],
                    "options": Object {},
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/renderer/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/renderer/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      "...",
      CssMinimizerPlugin {
        "options": Object {
          "exclude": undefined,
          "include": undefined,
          "minify": [Function],
          "minimizerOptions": undefined,
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].[contenthash].js",
    "hashDigestLength": 12,
    "libraryTarget": "commonjs2",
    "path": "/test/src/build",
    "publicPath": "/",
  },
  "performance": Object {
    "assetFilter": [Function],
    "hints": "warning",
    "maxAssetSize": 275000,
    "maxEntrypointSize": 500000,
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "inject": false,
        "minify": false,
        "publicPath": "/",
        "template": "/test/src/renderer/index.html",
      },
      "version": 5,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.[contenthash].svg",
        "injectSpriteId": false,
      },
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    DuplicatePackageCheckerPlugin {
      "options": Object {
        "emitError": false,
        "exclude": null,
        "showHelp": true,
        "strict": true,
        "verbose": true,
      },
    },
    MiniCSSExtractPlugin {
      "options": Object {
        "chunkFilename": "static/css/[name].[contenthash].css",
        "filename": "static/css/[name].[contenthash].css",
      },
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
  "stats": Object {
    "excludeAssets": [Function],
    "modules": false,
  },
  "target": "electron-renderer",
}
`;

exports[`webpack-base returns expected prod configs 1`] = `
Object {
  "bail": true,
  "context": "/test",
  "devtool": "source-map",
  "entry": "/test/src/index.js",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "@linaria/webpack-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          "/test/path/to/mini-css-extract-loader",
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "postcssOptions": Object {
                "plugins": Array [
                  Object {
                    "browsers": undefined,
                    "info": [Function],
                    "options": Object {},
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      "...",
      CssMinimizerPlugin {
        "options": Object {
          "exclude": undefined,
          "include": undefined,
          "minify": [Function],
          "minimizerOptions": undefined,
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].[contenthash].js",
    "hashDigestLength": 12,
    "path": "/test/public",
    "publicPath": "/",
  },
  "performance": Object {
    "assetFilter": [Function],
    "hints": "warning",
    "maxAssetSize": 275000,
    "maxEntrypointSize": 500000,
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "inject": true,
        "minify": false,
        "publicPath": "/",
        "template": "/test/src/index.html",
      },
      "version": 5,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.[contenthash].svg",
        "injectSpriteId": true,
      },
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    DuplicatePackageCheckerPlugin {
      "options": Object {
        "emitError": false,
        "exclude": null,
        "showHelp": true,
        "strict": true,
        "verbose": true,
      },
    },
    MiniCSSExtractPlugin {
      "options": Object {
        "chunkFilename": "static/css/[name].[contenthash].css",
        "filename": "static/css/[name].[contenthash].css",
      },
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
  "stats": Object {
    "excludeAssets": [Function],
    "modules": false,
  },
}
`;

exports[`webpack-base returns expected storybook configs 1`] = `
Object {
  "context": "/test",
  "devServer": Object {
    "client": Object {
      "overlay": Object {
        "errors": true,
        "warnings": false,
      },
    },
    "historyApiFallback": true,
    "hot": true,
    "open": false,
    "port": 3000,
    "static": "/test/static",
  },
  "devtool": "eval-source-map",
  "entry": "/test/src/index.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "include": Array [
          "/test/src",
        ],
        "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
            "options": Object {
              "cacheDirectory": true,
            },
          },
          Object {
            "loader": "@linaria/webpack-loader",
            "options": Object {
              "sourceMap": true,
            },
          },
          Object {
            "loader": "eslint-loader",
          },
        ],
      },
      Object {
        "test": /\\\\\\.mdx\\$/,
        "use": Array [
          Object {
            "loader": "babel-loader",
          },
          Object {
            "loader": "@mdx-js/loader",
            "options": Object {
              "rehypePlugins": Array [],
              "remarkPlugins": Array [],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.scss\\$/,
        "use": Array [
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "modules": Object {
                "localIdentName": "[name]-[local]--[hash:5]",
                "mode": "global",
              },
              "sourceMap": true,
            },
          },
          Object {
            "loader": "sass-loader",
            "options": Object {
              "sassOptions": Object {},
              "sourceMap": true,
            },
          },
        ],
      },
      Object {
        "include": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "svg-symbol-sprite-loader",
          },
        ],
      },
      Object {
        "exclude": Array [
          "/test/src/media/icons",
        ],
        "test": /\\\\\\.svg\\$/,
        "use": Array [
          Object {
            "loader": "@svgr/webpack",
            "options": Object {
              "svgo": true,
              "svgoConfig": Object {
                "plugins": Array [
                  Object {
                    "removeViewBox": false,
                  },
                ],
              },
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {
              "name": "static/media/[name].[hash:8].[ext]",
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.txt\\$/,
        "use": Array [
          Object {
            "loader": "raw-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "minimizer": Array [
      "...",
      CssMinimizerPlugin {
        "options": Object {
          "exclude": undefined,
          "include": undefined,
          "minify": [Function],
          "minimizerOptions": undefined,
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": Object {
      "chunks": "all",
    },
  },
  "output": Object {
    "filename": "static/js/[name].js",
    "hashDigestLength": 12,
    "path": "/test/public",
    "publicPath": "/",
  },
  "plugins": Array [
    CaseSensitivePathsPlugin {
      "options": undefined,
    },
    EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    HtmlWebpackPlugin {
      "userOptions": Object {
        "inject": true,
        "minify": false,
        "publicPath": "/",
        "template": "/test/src/index.html",
      },
      "version": 5,
    },
    SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.svg",
        "injectSpriteId": false,
      },
    },
  ],
  "resolve": Object {
    "alias": Object {},
    "extensions": Array [
      ".js",
      ".jsx",
      ".json",
      ".ts",
      ".tsx",
    ],
  },
  "stats": Object {
    "logging": "warn",
  },
}
`;

exports[`webpack-base returns loader and plugin components 1`] = `
Object {
  "loaders": Object {
    "fileLoader": Object {
      "test": /\\\\\\.\\(jpe\\?g\\|png\\|gif\\)\\$/i,
      "use": Array [
        Object {
          "loader": "file-loader",
          "options": Object {
            "name": "static/media/[name].[hash:8].[ext]",
          },
        },
      ],
    },
    "jsLoader": Object {
      "include": Array [
        "/test/src",
      ],
      "test": /\\\\\\.\\(jsx\\?\\|tsx\\?\\)\\$/,
      "use": Array [
        Object {
          "loader": "babel-loader",
          "options": Object {
            "cacheDirectory": true,
          },
        },
        Object {
          "loader": "@linaria/webpack-loader",
          "options": Object {
            "sourceMap": true,
          },
        },
        Object {
          "loader": "eslint-loader",
        },
      ],
    },
    "mdxLoader": Object {
      "test": /\\\\\\.mdx\\$/,
      "use": Array [
        Object {
          "loader": "babel-loader",
        },
        Object {
          "loader": "@mdx-js/loader",
          "options": Object {
            "rehypePlugins": Array [],
            "remarkPlugins": Array [],
          },
        },
      ],
    },
    "rawLoader": Object {
      "test": /\\\\\\.txt\\$/,
      "use": Array [
        Object {
          "loader": "raw-loader",
        },
      ],
    },
    "sassLoader": Object {
      "test": /\\\\\\.scss\\$/,
      "use": Array [
        Object {
          "loader": "style-loader",
        },
        Object {
          "loader": "css-loader",
          "options": Object {
            "modules": Object {
              "localIdentName": "[name]-[local]--[hash:5]",
              "mode": "global",
            },
            "sourceMap": true,
          },
        },
        Object {
          "loader": "sass-loader",
          "options": Object {
            "sassOptions": Object {},
            "sourceMap": true,
          },
        },
      ],
    },
    "svgComponentLoader": Object {
      "exclude": Array [
        "/test/src/media/icons",
      ],
      "test": /\\\\\\.svg\\$/,
      "use": Array [
        Object {
          "loader": "@svgr/webpack",
          "options": Object {
            "svgo": true,
            "svgoConfig": Object {
              "plugins": Array [
                Object {
                  "removeViewBox": false,
                },
              ],
            },
          },
        },
      ],
    },
    "svgSpriteLoader": Object {
      "include": Array [
        "/test/src/media/icons",
      ],
      "test": /\\\\\\.svg\\$/,
      "use": Array [
        Object {
          "loader": "svg-symbol-sprite-loader",
        },
      ],
    },
  },
  "plugins": Object {
    "caseSensitivePathsPlugin": CaseSensitivePathsPlugin {
      "options": undefined,
    },
    "copyPlugin": CopyPlugin {
      "options": Object {},
      "patterns": Array [
        "/test/static",
      ],
    },
    "environmentPlugin": EnvironmentPlugin {
      "defaultValues": Object {
        "DEBUG": false,
        "PUBLIC_PATH": "/",
      },
      "keys": Array [
        "DEBUG",
        "PUBLIC_PATH",
      ],
    },
    "htmlPlugin": HtmlWebpackPlugin {
      "userOptions": Object {
        "inject": true,
        "minify": false,
        "publicPath": "/",
        "template": "/test/src/index.html",
      },
      "version": 5,
    },
    "svgSymbolSpritePlugin": SVGSymbolSpritePlugin {
      "options": Object {
        "filename": "static/media/icon-sprite.svg",
        "injectSpriteId": true,
      },
    },
  },
}
`;
